--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,15 @@
         "Access-Control-Allow-Origin": "*",
         "User-Agent": "vercel serveless function"
       }
+    },
+    {
+      "src": "/api/nico/seiga/keyword",
+      "methods": ["GET"],
+      "dest": "/api/nico/seiga/keyword",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "User-Agent": "vercel serveless function"
+      }
     }
   ]
 }
